Renamed readTask to readTaskAndRemoveValue

--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ body {
 .heading {
   width: 80%;
   height: 5%;
+  margin: 1em 1em;
 }
 
 h1 {
@@ -28,10 +29,11 @@ h1 {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  border: 1px solid rgb(0, 0, 0);
+
   height: 70px;
   width: 100%;
   row-gap: 2em;
+  margin: 1em 1em;
 }
 
 #task-details {
@@ -40,4 +42,8 @@ h1 {
 
 #add-task {
   height: 50px;
+}
+
+.task-list {
+  margin: 1em 2em;
 }
