--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   font-size: 18px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -23,6 +24,7 @@ body {
 
 h1 {
   font-size: 2em;
+  text-decoration: underline;
 }
 
 #input-section {
