--- a/task-style.css
+++ b/task-style.css
@@ -2,20 +2,24 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-size: 1em;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.flex {
-  display: flex;
+  font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
   width: 70%;
-  border: 1px solid red;
+  background-color: FAF3F0;
   flex-flow: column wrap;
   margin: 2em auto;
   padding: 2em 4em;
+}
+
+.page {
+  height: 100%;
+  background-color: D4E2D4;
+  border-radius: 0.6em;
+  padding-top: 2%;
 }
 
 header {
@@ -28,19 +32,26 @@ h1 {
   text-decoration: underline;
 }
 
-main {
-  height: 80%;
-  width: 100%;
+.main * {
+  font-weight: 300;
+}
+
+.main {
+  width: 90%;
   margin: 3em auto;
   flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  row-gap: 1.5em;
 }
 
 #input-section {
-  width: 70%;
+  width: 100%;
   height: 10%;
   flex-flow: row wrap;
-  justify-content: space-evenly;
-  align-content: center;
+  justify-content: center;
+  column-gap: 1em;
+  font-weight: 300;
 }
 
 .input {
@@ -48,16 +59,58 @@ main {
 }
 
 #task-details {
-  width: 70%;
+  width: 60%;
   padding: 0em 0.5em;
 }
 
-.task-list {
+#sort-status {
+  align-self: flex-end;
+}
+
+#todo-list {
+  width: 80%;
+  height: 500px;
+  border: 1px solid red;
+  border-radius: 1em;
+  background-color: FFCACC;
   padding: 2em 4em;
-  flex-flow: column wrap;
-  row-gap: 1em;
-  font-size: 1.1em;
-  line-height: 1.4em;
+  font-size: 1em;
+  line-height: 3em;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#sort-options {
+  width: 90%;
+  justify-content: flex-end;
+  column-gap: 1em;
+  padding-right: 0.6em;
+}
+
+.task {
+  width: 600px;
+  height: 60px;
+  border: 1px solid red;
+  border-radius: 0.6em;
+  justify-content:space-between;
+  align-items: center;
+  padding: 0 1em;
+  background-color: DBC4F0;
+  margin-bottom: 1em;
+}
+
+.scroll{
+  overflow: scroll;
+}
+
+.flexRow {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.flexColumn {
+  display: flex;
+  flex-direction: column;
 }
 
 .marked {
